--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="/accounts">Accounts</a>
+          <a class="nav-link" routerLink="/admin/accounts">Accounts</a>
         </li>
 
         <li class="nav-item dropdown">
@@ -19,18 +19,23 @@
             Customers
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" routerLink="/customers">Search customer</a></li>
-            <li><a class="dropdown-item" routerLink="/new-customer">New customer</a></li>
+            <li><a class="dropdown-item" routerLink="/admin/customers">Search customer</a></li>
+            <li *ngIf="authService.roles.includes('ADMIN')"><a class="dropdown-item" routerLink="/admin/new-customer">New customer</a></li>
           </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+
+      <ul class="navbar list-unstyled" *ngIf="authService.isAuthenticated==true">
+        <li class="nav-item">
+          <a class="nav-link active"> {{ this.authService.username }} </a>
+        </li>
+        <li>
+          <button (click)="handelLogout()" class="btn btn-success">Logout</button>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
