--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -86,7 +86,7 @@
               <input class="form-check-input" type="radio" formControlName="operationType" value="TRANSFER">
             </div>
 
-            <div class="mb-3" *ngIf="operationFormGroup.value.operationType === 'TRANSFER'">
+            <div class="mb-3" *ngIf="operationFormGroup.value.operationType=='TRANSFER'">
               <label for="accountDestination" class="form-label">Account Destination:</label>
               <input type="text" formControlName="accountDestination" class="form-control" id="accountDestination" placeholder="Enter Destination Account ID">
             </div>
